# patina

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cspell.yml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: calculate-unsafe-code.yml  ci-workflow.yml  crate-version-update.yml  label-issues.yml  label-sync.yml  publish-mdbook.yml  publish-release.yml  rust-version-check.yml  triage-issues.yml
components/acpi/: Cargo.toml
components/acpi/src/: acpi.rs  acpi_init.rs  acpi_protocol.rs  acpi_table.rs  component.rs  config.rs  error.rs  integration_test.rs  lib.rs  service.rs  signature.rs
components/patina_acpi/: Cargo.toml
components/patina_acpi/src/: acpi.rs  acpi_protocol.rs  acpi_table.rs  component.rs  config.rs  error.rs  hob.rs  integration_test.rs  lib.rs  service.rs  signature.rs
components/patina_mm/src/: config.rs
components/patina_mm/src/component/: communicator.rs  sw_mmi_manager.rs
components/patina_performance/: Cargo.toml
components/patina_performance/src/: firmware_performance.rs  lib.rs
components/patina_variables/: Cargo.toml
components/patina_variables/src/: error.rs  lib.rs  service.rs  variable.rs  variable_store.rs
core/patina_debugger/: Cargo.toml
core/patina_debugger/src/: arch.rs  debugger.rs
core/patina_debugger/src/arch/: aarch64.rs  x64.rs
core/patina_internal_cpu/: Cargo.toml
core/patina_internal_cpu/src/: interrupts.rs
core/patina_internal_cpu/src/interrupts/: aarch64.rs  exception_handling.rs  x64.rs
core/patina_internal_cpu/src/interrupts/aarch64/: interrupt_manager.rs
core/patina_internal_cpu/src/interrupts/x64/: interrupt_manager.rs
core/patina_internal_depex/src/: lib.rs
core/patina_stacktrace/: README.md
core/patina_stacktrace/resolve_stacktrace/: resolve_stacktrace.ps1
core/patina_stacktrace/src/: byte_reader.rs  error.rs  lib.rs  pe.rs  stacktrace.rs
core/patina_stacktrace/src/aarch64/: runtime_function.rs  unwind.rs
core/patina_stacktrace/src/x64/: runtime_function.rs  unwind.rs
docs/src/: SUMMARY.md  patina.md
docs/src/component/: requirements.md
docs/src/dev/principles/: unsafe.md
docs/src/integrate/: dxe_core.md  patina_dxe_core_requirements.md  patina_dxe_core_requirements_checklist.md
docs/src/rfc/text/: 0020-aml-parser.md
patina_dxe_core/: Cargo.toml
patina_dxe_core/examples/: std.rs
patina_dxe_core/src/: allocator.rs  dispatcher.rs  driver_services.rs  dxe_services.rs  event_db.rs  fv.rs  gcd.rs  image.rs  lib.rs  protocols.rs  runtime.rs  test_support.rs
patina_dxe_core/src/allocator/: fixed_size_block_allocator.rs  uefi_allocator.rs
patina_dxe_core/src/gcd/: spin_locked_gcd.rs
sdk/patina/: Cargo.toml
sdk/patina/examples/: basic_hob_usage.rs
sdk/patina/src/: base.rs  component.rs
sdk/patina/src/component/: params.rs  struct_component.rs
sdk/patina/src/performance/: measurement.rs
sdk/patina_ffs_extractors/: Cargo.toml
sdk/patina_macro/src/: component_macro.rs  hob_macro.rs  lib.rs  service_macro.rs  test_macro.rs
