[package]
name = "patina_acpi"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "UEFI Software Development Kit (SDK) that provides common types and functionality used in UEFI development."

[dependencies]
bitflags = { workspace = true }
uefi_sdk = { workspace = true }
spin = { workspace = true }
scroll = { workspace = true }
memoffset = { workspace = true }
r-efi = { workspace = true }
downcast-rs =  { workspace = true }
