[package]
name = "patina_acpi"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "UEFI ACPI services that provide common types and functionality used in ACPI development."

[dependencies]
downcast-rs = { workspace = true }
memoffset = { workspace = true }
mockall = { workspace = true, optional = true }
patina_sdk = { workspace = true }
r-efi = { workspace = true }
scroll = { workspace = true }
spin = { workspace = true }
scroll = { workspace = true }
memoffset = { workspace = true }
r-efi = { workspace = true }
downcast-rs =  { workspace = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
env_logger = "0.11"
log = "0.4"

[features]
mockall = ["dep:mockall"]
alloc = []