[package]
name = "patina_acpi"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "UEFI ACPI services that provide common types and functionality used in ACPI development."

[dependencies]
log = { workspace = true }
memoffset = { workspace = true }
mockall = { workspace = true, optional = true }
patina_sdk = { workspace = true }
r-efi = { workspace = true }
scroll = { workspace = true }
spin = { workspace = true }
scroll = { workspace = true }
memoffset = { workspace = true }
r-efi = { workspace = true }
downcast-rs =  { workspace = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }

[features]
mockall = ["dep:mockall"]
alloc = []