[package]
name = "patina_variables"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "UEFI ACPI services that provide common types and functionality used in ACPI development."

[dependencies]
bitflags = { workspace = true }
r-efi = { workspace = true }
patina_sdk = { workspace = true }
spin = { workspace = true }

[dev-dependencies]

[features]
alloc = []
